Fix the search icon moving position on small screens

--- a/src/components/Searchbar/_Searchbar.scss
+++ b/src/components/Searchbar/_Searchbar.scss
@@ -4,7 +4,6 @@
 
   span {
     position: absolute;
-    top: 45px;
     left: 14px;
   }
 
